fixing some requirements, inheritance, naming conventions

--- a/TestWPF/MainWindow.xaml
+++ b/TestWPF/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="476.738" Width="1014.635">
     <Grid>
         <Label Content="Students List" HorizontalAlignment="Left" Margin="34,22,0,0" VerticalAlignment="Top"/>
-        <ListBox Name="StudentsListBox" HorizontalAlignment="Left" Height="334" Margin="34,47,0,0" VerticalAlignment="Top" Width="138" MouseDoubleClick="StudentsListBox_MouseDoubleClick">
+        <ListBox Name="StudentsListBox" HorizontalAlignment="Left" Height="334" Margin="34,47,0,0" VerticalAlignment="Top" Width="138" SelectionChanged="StudentsListBox_SelectionChanged" SelectionMode="Single">
 
         </ListBox>
         <TextBox Name="FirstNameTextBox"  HorizontalAlignment="Left" Height="23" Margin="308,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
@@ -18,7 +18,7 @@
         <TextBox x:Name="StudentIDTextBox"  HorizontalAlignment="Left" Height="23" Margin="308,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="Student ID" HorizontalAlignment="Left" Margin="210,163,0,0" VerticalAlignment="Top"/>
         <Label Content="Gender" HorizontalAlignment="Left" Margin="210,209,0,0" VerticalAlignment="Top"/>
-        <ComboBox HorizontalAlignment="Left" Margin="308,209,0,0" VerticalAlignment="Top" Width="120">
+        <ComboBox Name="GenderCombo" HorizontalAlignment="Left" Margin="308,209,0,0" VerticalAlignment="Top" Width="120">
             <ComboBoxItem IsSelected="True">Male</ComboBoxItem>
             <ComboBoxItem>Female</ComboBoxItem> 
             <ComboBoxItem>Other</ComboBoxItem>
